minio/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      name: minio
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          imagePullPolicy: Always
          command: ["minio"]
          args: ["server", "/data"]
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: service
              containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            timeoutSeconds: 10
          resources:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-persistent-storage
        - name: minio-user
          secret:
            secretName: minio-user
