minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
